Fix firefox alignment bug

--- a/client/scss/components/_tags.scss
+++ b/client/scss/components/_tags.scss
@@ -1,5 +1,5 @@
 .tags__list {
-  align-items: baseline;
+  align-items: flex-start;
 }
 
 .tags__tag {
